Populate blacklist with ten most visited sites.

--- a/chrome/options/index.html
+++ b/chrome/options/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Focus Streak Options</title>
+  <script src="options.js"></script>
 </head>
 <body>
 
-...I Focus on putting more Streaky stuff here.
+
+<div id="welcome_heading"></div>
+
+<h2>These are the sites we wan't to avoid using:</h2>
+
+<div id="loading"><h1>Loading</h1></div>
+<table id="blacklist_table"></table>
+
 </body>
 </html>
