--- a/chrome/options/index.html
+++ b/chrome/options/index.html
@@ -9,7 +9,7 @@
 
 <div id="welcome_heading"></div>
 
-<h2>These are the sites we wan't to avoid using:</h2>
+<h2>These are the sites we want to avoid using:</h2>
 
 <div id="loading"><h1>Loading</h1></div>
 <table id="blacklist_table"></table>
