--- a/chrome/options/index.html
+++ b/chrome/options/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 
-
 <div id="welcome_heading"></div>
 
 <h2>These are the sites we want to avoid using:</h2>
@@ -14,5 +13,10 @@
 <div id="loading"><h1>Loading</h1></div>
 <table id="blacklist_table"></table>
 
+<hr>
+<form id="hostname_form">
+  <input type="text" name="hostname" placeholder="example.com">
+  <input type="submit" value="Add site to blacklist">
+</form>
 </body>
 </html>
